# auto_manager

./: .gitignore  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  test.py
api_service/: Dockerfile  broker_manager.py  config.yaml  database_manager.py  deps.py  main.py  message_buffer.py  pyproject.toml  schemas.py  telegram_sender.py  utils.py
api_service/routers/: __init__.py  auth_router.py  favorites_router.py  post_router.py
core/openAI/: tests.py
core/parsers/: multi_parser.py
core/parsers/article_parsers/: MIT_parser.py  __init__.py  scientificamerican_parser.py  settings.py
core/schedule/: schedule.py
data_preparing_service/: Dockerfile  broker_manager.py  config.yaml  database_manager.py  gpt_manager.py  main.py  pyproject.toml  request_manager.py
frontend_service/: Dockerfile  package-lock.json  package.json
frontend_service/public/: index.html
frontend_service/src/: App.css  App.jsx  api.js  config.js  index.js  palette.css  postStore.js  variables.css
frontend_service/src/components/: answerTile.jsx  answersContainer.css  answersContainer.jsx  answersTile.css  control.css  control.jsx  favorites.jsx  filters.css  filters.jsx  header.css  header.jsx  login.css  login.jsx  notFound.jsx  popup.css  popup.jsx  postContainer.css  postsContainer.jsx  signup.css  signup.jsx  tile.css  tile.jsx
parser_service/: Dockerfile  config.yaml  main.py  pyproject.toml
parser_service/core/: database_manager.py
parser_service/core/broker/: broker_manager.py  message_buffer.py  progress_notifier.py
parser_service/core/openAI/: t.py  tests.py
parser_service/core/parsers/: __init__.py  multi_parser.py  multi_parser_runner.py
parser_service/core/parsers/article_parsers/: MIT_parser.py  __init__.py  extremetech.py  extremetech_parser.py  gizmodo_parser.py  pipelines.py  scientificamerican_parser.py  synced_parser.py  universal_article_parser.py  universal_title_parser.py  venturebeat_parser.py
parser_service/core/schedule/: schedule.py
telegram/: __init__.py  telegram_bot.py
telegram_service/: Dockerfile  config.yaml  main.py  pyproject.toml  telegram_bot.py
telegram_service/core/: broker.py  database_manager.py  database_manager_UML.txt
telegram_service/core/controllers/: start_controller.py
