[tool.poetry]
name = "auto-manager"
version = "0.1.0"
description = ""
authors = ["geer.max0404 <geer.max0404@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_manager"}]

[tool.poetry.dependencies]
python = "^3.7"
bestconfig = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
