[tool.poetry]
name = "data-preparing-service"
version = "0.1.0"
description = ""
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
openai = "^1.3.5"
bestconfig = "^1.3.6"
pika = "^1.3.2"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
