[tool.poetry]
name = "parser-service"
version = "0.1.0"
description = ""
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
scrapy = "^2.11.0"
pytz = "^2023.3.post1"
mysql-connector-python = "^8.2.0"
pika = "^1.3.2"
bestconfig = "^1.3.6"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
openai = "1.3.5"
tiktoken = "^0.5.2"
selenium = "^4.18.1"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
