[tool.poetry]
name = "telegram-service"
version = "0.1.0"
description = ""
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
bestconfig = "^1.3.6"
aiogram = "^2.23.1"
pika = "^1.3.2"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
